--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mysql2": "^3.15.1"
+    "mysql2": "^3.15.1",
+    "qrcode.react": "^4.2.0"
   }
 }
